--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 
 <body>
-  
+  <button id="downloadBtn">다운로드</button>
   <div class="container">
     <div class="photos">
       <div id="image1" class="photo-frame">
