--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    @font-face {
-      font-family: "LeeSeoyun";
-      src: url("<https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff>") format("woff");
-      font-weight: normal;
-      font-style: normal;
-    }
-
     body {
-      font-family: "LeeSeoyun";
       margin: 0;
       display: flex;
       justify-content: center;
@@ -57,7 +49,7 @@
       font-size: 25px;
       font-weight: 500;
     }
-    
+
 
 
     #image1 {
@@ -67,28 +59,31 @@
     #image2 {
       background-image: url(./2.jpg);
     }
+
     #image3 {
       background-image: url(./4.jpg);
     }
+
     #image4 {
       background-image: url(./3.jpg);
     }
 
-   .photo_description{
-    color: white;
-    background-color: black;
-    width: fit-content;
-    padding: 0 20px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 0;
-    transform: translate(-50%);
-    left: 50%;
-   }
-
+    .photo_description {
+      color: white;
+      background-color: black;
+      padding: 0 20px;
+      margin-bottom: 10px;
+      border-radius: 10px;
+      position: absolute;
+      bottom: 0;
+      transform: translate(-50%);
+      left: 50%;
+    }
+    #downloadBtn{
+      height: 30px;
+    }
   </style>
-    <script>
+  <script>
     document.addEventListener("DOMContentLoaded", function () {
       document.getElementById("downloadBtn").addEventListener("click", function () {
         html2canvas(document.body).then(function (canvas) {
@@ -130,7 +125,7 @@
     </div>
     <div class="footer">
       <p class="f-title">KYUNG MIN & MIN SEOUNG</p>
-  
+
 
       <p class="f-date">2022.08.20 ~ ing</p>
     </div>
